# base-tg-bot

./: .env  .gitignore  Dockerfile  Pipfile  README.md  cli.py  config.json  phrases.json  pyproject.toml  requirements.txt  start.bat  start.py  start.sh  update.py  update_config.py
.docker/: .dockerignore  bot.dockerfile  bot.dockerfile.dockerignore
bot/: __init__.py  __main__.py  bot.py  callback_data.py  client.py  config.py  filters.py  markups.py  models.py  phrases.py  protocols.py  settings.py  state.py
bot/database/: __init__.py  models.py
bot/filters/: __init__.py  admin.py  argument_protocol.py
bot/handlers/: start.py
bot/middleware/: __init__.py  bot_user.py  services_di.py
bot/models/: config_model.py
bot/models/config/: bot_config.py
bot/models/phrases/: bot_phrases.py
bot/phrases/: __init__.py  admin_phrases.py
bot/routers/: __init__.py  chat_member.py  error.py
bot/routers/admin/: __init__.py
bot/routers/user/: __init__.py  form.py  start.py  test.py
bot/schedule/: __init__.py  jobs.py
bot/services/: __init__.py  base.py  manager.py
bot/services/database/: __init__.py  models.py
bot/services/schedule/: __init__.py  jobs.py
bot/state/: __init__.py  groups.py
bot/utils/: __init__.py  asset.py  bot.py  database.py  dateutils.py  dispatcher.py  form.py  loader.py  markups.py  paths.py  protocols.py  router.py  service_manager.py  services.py  startup.py  tortoise_storage.py
bot/utils/services/: base.py  manager.py  middleware.py
phrases/: ru.json
prisma/: .env  schema.prisma
(+1 files in other folders)
