[tool.poetry]
name = "base-tg-bot"
version = "1.1.0"
description = ""
authors = ["TrixiS <oficialmorozov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram3-form = "2.0.2"
tortoise-orm = "^0.20.0"
aerich = "^0.7.2"
pydantic-settings = "^2.0.3"
uvloop = [{ version = "^0.17.0", markers = 'sys_platform != "win32"' }]
aiogram = "3.8.0"


[tool.poetry.group.dev.dependencies]
typer = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
