[project]
name = "base-tg-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aerich==0.8.0",
    "aiogram3-form==2.0.4",
    "aiogram==3.16.0",
    "pydantic-settings==2.7.0",
    "tortoise-orm==0.22.2",
    "uvloop==0.21.0; sys_platform == 'linux' or sys_platform == 'darwin'",
]

[dependency-groups]
dev = []
